PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? ????, PHP 7.3.14

- Core
  . Fixed bug #78999 (Cycle leak when using function result as temporary).
    (Dmitry)

- CURL:
  . Implemented FR #77711 (CURLFile should support UNICODE filenames). (cmb)

- GD:
  . Fixed bug #78923 (Artifacts when convoluting image with transparency).
    (wilson chen)

- Pcntl:
  . Fixed bug #78402 (Converting null to string in error message is bad DX).
    (SATŌ Kentarō)

- PDO_PgSQL:
  . Fixed bug #78983 (pdo_pgsql config.w32 cannot find libpq-fe.h). (SATŌ
    Kentarō)

18 Dec 2019, PHP 7.3.13

- Bcmath:
  . Fixed bug #78878 (Buffer underflow in bc_shift_addsub). (CVE-2019-11046).
    (cmb)

- Core:
  . Fixed bug #78862 (link() silently truncates after a null byte on Windows).
    (CVE-2019-11044). (cmb)
  . Fixed bug #78863 (DirectoryIterator class silently truncates after a null
    byte). (CVE-2019-11045). (cmb)
  . Fixed bug #78943 (mail() may release string with refcount==1 twice).
    (CVE-2019-11049). (cmb)
  . Fixed bug #78787 (Segfault with trait overriding inherited private shadow
    property). (Nikita)
  . Fixed bug #78868 (Calling __autoload() with incorrect EG(fake_scope) value).
    (Antony Dovgal, Dmitry)
  . Fixed bug #78296 (is_file fails to detect file). (cmb)

- EXIF:
  . Fixed bug #78793 (Use-after-free in exif parsing under memory sanitizer).
    (CVE-2019-11050). (Nikita)
  . Fixed bug #78910 (Heap-buffer-overflow READ in exif). (CVE-2019-11047).
    (Nikita)

- GD:
  . Fixed bug #78849 (GD build broken with -D SIGNED_COMPARE_SLOW). (cmb)

- MBString:
  . Upgraded bundled Oniguruma to 6.9.4. (cmb)

- OPcache:
  . Fixed potential ASLR related invalid opline handler issues. (cmb)
  . Fixed $x = (bool)$x; with opcache (should emit undeclared variable notice).
    (Tyson Andre)

- PCRE:
  . Fixed bug #78853 (preg_match() may return integer > 1). (cmb)